--- a/detail.html
+++ b/detail.html
@@ -144,6 +144,7 @@
 
     <section class="base base-news">
         <div class="container">
+            <h3>MORE NEWS</h3>
             <ul class="news_list">
                 <li class="news_item">
                     <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
